[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ETtoolbox"
version = "1.0.0"
description = "Evapotranspiration Product Generator for the USBR-JPL Second Generation ET Toolbox"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"

[tool.setuptools.package-data]
ETtoolbox = ["*.txt"]

[project.urls]
Homepage = "https://gitlab.bor.doi.net/aao-et-toolbox/aao-et-calculation"

[tool.setuptools.packages.find]
include = ["ETtoolbox"]
exclude = ["calval"]
